Nearly done with the review comments

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -101,13 +101,13 @@
 \author[monash,crc]{Nigel~J.~Tapper}
 \cortext[cor1]{Principal corresponding author}
 \address[monash]{School of Earth, Atmosphere and Environment, Monash University, Clayton, Victoria 3800, Australia}
-\address[melb]{Transport, Health, and Urban Design, Faculty of Architecture, Building and Planning, University of Melbourne, Victoria 3010, Australia}
+\address[melb]{Transport, Health, and Urban Design Hub, Faculty of Architecture, Building, and Planning, University of Melbourne, Victoria 3010, Australia}
 \address[crc]{Cooperative Research Centre for Water Sensitive Cities, Melbourne, Australia}
 
 
 \begin{abstract}
 
-With urban areas facing longer duration heat-waves and temperature extremes from climate change and growing urban development, adaptation strategies are needed to protect city residents. Examining the role that increased tree cover and water availability can have on human thermal comfort (HTC) is needed to help guide the development of thermally comfortable cities. To inform planning, modelling tools are needed that provide sufficient resolution to resolve urban influences on HTC and the ability to model important physiological processes of vegetation. To achieve this, a new micro-scale model, VTUF-3D (Vegetated Temperatures of Urban Facets), has been developed using an innovative approach of embedding the functionality of the MAESPA tree process model \citep{Duursma2012}, that can model individual trees, vegetation, and soil components, within the TUF-3D \citep{Krayenhoff2007} urban micro-climate model. A innovative tiling approach allows the new model to account for important vegetative physiological processes and shading effects, using configurable templates to allow representation of any type of vegetation or water sensitive design feature. This allows detailed calculations of surface temperatures ($T_{sfc}$), mean radiant temperature ($T_{mrt}$), and a HTC index, the universal thermal climate index (UTCI), across an urban canyon. This study presents an outline of VTUF-3D, along with two evaluations, the first of the modelled surface energy flux balances for Preston, Australia \citep{Coutts2007}, and the second of spatial and temporal predictions of $T_{sfc}$ and UTCI across two observed street canyons in the City of Melbourne \citep{Coutts2015}. The VTUF-3D model has shown it performs well and is suitable for use to examine critical questions relating to the role of vegetation and water in the urban environment. Using this model, it is now possible to conduct further analysis to quantify the impact each individual tree can have on temperatures in urban canyons. Further, the model can help inform the optimal arrangement and quantity of trees to maximise temperature moderation effects and be used to generate best practices guidelines for urban greening.
+With urban areas facing longer duration heat-waves and temperature extremes from climate change and growing urban development, adaptation strategies are needed to protect city residents. Examining the role that increased tree cover and water availability can have on human thermal comfort (HTC) is needed to help guide the development of thermally comfortable cities. To inform planning, modelling tools are needed that provide sufficient resolution to resolve urban influences on HTC and the ability to model important physiological processes of vegetation. To achieve this, a new micro-scale model, VTUF-3D (Vegetated Temperatures of Urban Facets), has been developed using an innovative approach of embedding the functionality of the MAESPA tree process model \citep{Duursma2012}, that can model individual trees, vegetation, and soil components, within the TUF-3D \citep{Krayenhoff2007} urban micro-climate model. A innovative tiling approach allows the new model to account for important vegetative physiological processes and shading effects, using configurable templates to allow representation of any type of vegetation or water sensitive design feature. This allows detailed calculations of surface temperatures ($T_{sfc}$), mean radiant temperature ($T_{mrt}$), and a HTC index, the universal thermal climate index (UTCI), across an urban canyon. This study presents an outline of VTUF-3D, along with two evaluations, the first of the modelled surface energy flux balances for Preston, Australia \citep{Coutts2007}, and the second of spatial and temporal predictions of $T_{mrt}$ and UTCI across two observed street canyons in the City of Melbourne \citep{Coutts2015}. The VTUF-3D model has shown it performs well and is suitable for use to examine critical questions relating to the role of vegetation and water in the urban environment. Using this model, it is now possible to conduct further analysis to quantify the impact each individual tree can have on temperatures in urban canyons. Further, the model can help inform the optimal arrangement and quantity of trees to maximise temperature moderation effects and be used to generate best practices guidelines for urban greening.
 
 
 \end{abstract}
@@ -408,11 +408,11 @@ Each item of vegetation in the domain is modelled offline and this data is made 
 
 \section{Model evaluation}
 \subsection{Energy flux predictions evaluation}
+Evaluations of VTUF-3D need to be performed to ensure that this new model is making accurate predictions. As an energy balance model, modelled output comparisons to observations of energy fluxes and temperatures are considered fundamental evaluations \citep{Masson2002a}. With the addition of vegetation modelling, it is important that those aspects are also properly evaluated. 
+
 \subsubsection{Evaluation data}\label{sec:Validation}
 
-
-
-Evaluations of VTUF-3D need to be performed to ensure that this new model is making accurate predictions. As an energy balance model, modelled output comparisons to observations of energy fluxes and temperatures are considered fundamental evaluations \citep{Masson2002a}. With the addition of vegetation modelling, it is important that those aspects are also properly evaluated. To evaluation VTUF-3D's accuracy in partitioning fluxes, an evaluation was performed based on flux tower observations recorded in the suburb of Preston, in northern Melbourne, Australia \citep{Coutts2007}. Preston is a homogeneous, low to medium density area and characterised as LCZ6B (open low-rise) \citep{Stewart2012b}. A 40 meter flux tower recorded observations during 2003 and 2004 \citep{Coutts2007}, providing observed values of $Q^{*}$, $Q_{H}$, $Q_{E}$, air temperature, humidity, wind speed and direction. $Q_{G}$ was calculated as a residual of the surface energy balance. Estimates of the anthropogenic heat flux ($Q_{F}$) were made using an inventory approach, though $Q_{F}$ is included implicitly in the observations and contributes to the observed sensible heat fluxes. The use of this data set allows an evaluation of surface energy balances against modelled predictions. This data set was also used as the forcing and comparison data set for Phase 2 and 4 of the International Urban Energy Balance Models Comparison Project \citep{Grimmond2011,Best2012}. Phase 2 of this comparison project evaluated the performance of 32 urban land surface modelling schemes, forced by and compared to these observations, using a consistent methodology. Phase 4 re-evaluated many of these modelling schemes for their performance across a variety of seasonal cycles.
+An evaluation was performed based on flux tower observations recorded in the suburb of Preston, in northern Melbourne, Australia \citep{Coutts2007}. Preston is a homogeneous, low to medium density area and characterised as LCZ6B (open low-rise) \citep{Stewart2012b}. A 40 meter flux tower recorded observations during 2003 and 2004 \citep{Coutts2007}, providing observed values of $Q^{*}$, $Q_{H}$, $Q_{E}$, air temperature, humidity, wind speed and direction. $Q_{G}$ was calculated as a residual of the surface energy balance. Estimates of the anthropogenic heat flux ($Q_{F}$) were made using an inventory approach, though $Q_{F}$ is included implicitly in the observations and contributes to the observed sensible heat fluxes. The use of this data set allows an evaluation of surface energy balances against modelled predictions. This data set was also used as the forcing and comparison data set for Phase 2 and 4 of the International Urban Energy Balance Models Comparison Project \citep{Grimmond2011,Best2012}. Phase 2 of this comparison project evaluated the performance of 32 urban land surface modelling schemes, forced by and compared to these observations, using a consistent methodology. Phase 4 re-evaluated many of these modelling schemes for their performance across a variety of seasonal cycles.
 
 \subsubsection{Evaluation set up}\label{sec:modelsetup}
 
@@ -581,12 +581,12 @@ Another consideration is that the under-prediction of $Q_{E}$ is likely contribu
 
 
 
-There will remain an amount of uncertainty in comparing the modelled results to the observations because of inherent uncertainties to both approaches. The observations were collected via a flux tower at 40m height, above the height of the urban roughness sublayer. The modelled results are the average of the fluxes from all of the urban surfaces, within the urban canyon and well within the urban roughness sublayer. While these comparisons can be done, i.e. \cite{Grimmond2011}, there remains an amount of uncertainly as they are comparing two slightly different values. However, tests were performed (not presented here) and found the model conserved energy despite different sources of modelled fluxes.
+%There will remain an amount of uncertainty in comparing the modelled results to the observations because of inherent uncertainties to both approaches. The observations were collected via a flux tower at 40m height, above the height of the urban roughness sublayer. The modelled results are the average of the fluxes from all of the urban surfaces, within the urban canyon and well within the urban roughness sublayer. While these comparisons can be done, i.e. \cite{Grimmond2011}, there remains an amount of uncertainly as they are comparing two slightly different values. However, tests were performed (not presented here) and found the model conserved energy despite different sources of modelled fluxes.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Spatial and temporal $T_{mrt}$ and UTCI evaluation}\label{sec:CoMValidations}
+\subsection{Spatial and temporal mean radiant temperature and human thermal comfort index evaluation}\label{sec:CoMValidations}
 
 While evaluating against the Preston flux observations indicates that VTUF-3D performs well in partitioning the basic energy fluxes, there are a number of other aspects that need to be validated to allow confidence in the model's accuracy, especially given the intended application of the model to assess the impacts of urban greening on micro-climates and HTC. Further evaluation is needed to ensure that the model correctly captures the spatial variations of $T_{mrt}$ driven by these fluxes. These values are also driven by varied shading effects across the urban canyon. Both values are highly influential on thermal comfort. The evaluation will be performed by comparing spatial values of $T_{mrt}$ and UTCI to observed values. Evaluations of spatial air temperature ($T_{a}$) will not be possible as air temperature is only predicted as a single canyon-wide value and not spatially.
 
@@ -604,7 +604,7 @@ This set of evaluations was undertaken using observations from George St. and Gi
 \caption{Location and photos of each street: Gipps St. (OPN), and George St. (TRD). Aerial view of the streets highlighting individual station locations and tree canopy coverage in Gipps St. (OPN), and George St. (TRD) \citep[p.58]{Coutts2015}.\label{fig:GeorgeGippsSt2}} 
 \end{figure}
 
-These two streets both have a shallow urban canyon and both are orientated E-W. Gipps St. contains a very limited canopy cover and is designated open (OPN) in the observation study. George St. contains a dense canopy cover and is designated as treed (TRD). Some of the sensors were placed directly under tree canopies and others out in the open. A main purpose of the VTUF-3D model will be to evaluate the impacts of different arrangements urban vegetation on HTC in urban canyons. Differing amounts of canopy cover are a major factor of these different arrangements. Because of this, an evaluation using observations from two very similar streetscapes which mainly differ in the amount of canopy cover will be an ideal evaluation of VTUF-3D's spatial accuracy in resolving the impacts of different arrangements and quantities of urban greenery on HTC.
+These two streets both have a shallow urban canyon, characterised as LCZ6B (open low-rise) \citep{Stewart2012b}, and both are orientated E-W. Gipps St. contains a very limited canopy cover and is designated open (OPN) in the observation study. George St. contains a dense canopy cover and is designated as treed (TRD). Some of the sensors were placed directly under tree canopies and others out in the open. A main purpose of the VTUF-3D model will be to evaluate the impacts of different arrangements urban vegetation on HTC in urban canyons. Differing amounts of canopy cover are a major factor of these different arrangements. Because of this, an evaluation using observations from two very similar streetscapes which mainly differ in the amount of canopy cover will be an ideal evaluation of VTUF-3D's spatial accuracy in resolving the impacts of different arrangements and quantities of urban greenery on HTC.
 
 Tree cover of Gipps St consists of \textit{Ulmus parvifolia} (Chinese Elm) with median heights of 9.5m and crown diameters of 9.6m. The limited tree cover of George St. also consists of \textit{U. parvifolia}. The entire street canyon floor of both streets are impervious, consisting of concrete and asphalt, with the exception of a small pervious area of 1.2m$^{2}$ surrounding each tree in the road areas. General characteristics of the two sites are summarised in Table \ref{tab:comvalpara}.
 
